--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,32 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+include_directories(include {catkin_INCLUDE_DIRS})
 
+add_library(ros_controllers STATIC
+            src/pure_pursuit.cpp
+)
+
+add_executable(ros_controllers_node src/main_node.cpp)
+
+target_link_libraries(ros_controllers
+                      ${catkin_LIBRARIES}
+
+)     
+
+ament_target_dependencies(ros_controllers rclcpp rclpy)
+
+target_link_libraries(ros_controllers_node 
+                      ${catkin_LIBRARIES}
+                      ros_controllers
+)
+ament_target_dependencies(ros_controllers_node rclcpp rclpy)
+
+                      
+ament_export_dependencies(rosidl_default_runtime)
 ament_package()
