feat: ros2 node is shared with controllers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,14 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
+find_package(nav_msgs REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 include_directories(include {catkin_INCLUDE_DIRS})
 
 add_library(ros_controllers STATIC
-            src/pure_pursuit.cpp
+            src/stanley.cpp
 )
 
 add_executable(ros_controllers_node src/main_node.cpp)
@@ -25,7 +26,7 @@ target_link_libraries(ros_controllers
 
 )     
 
-ament_target_dependencies(ros_controllers rclcpp rclpy)
+ament_target_dependencies(ros_controllers rclcpp rclpy nav_msgs)
 
 target_link_libraries(ros_controllers_node 
                       ${catkin_LIBRARIES}
@@ -43,7 +44,7 @@ install(DIRECTORY
   DESTINATION share/${PROJECT_NAME}/
 )
 
-ament_target_dependencies(ros_controllers_node rclcpp rclpy)
+ament_target_dependencies(ros_controllers_node rclcpp rclpy nav_msgs)
 
                       
 ament_export_dependencies(rosidl_default_runtime)
