--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
@@ -28,7 +31,7 @@ target_link_libraries(ros_controllers
 
 )     
 
-ament_target_dependencies(ros_controllers rclcpp rclpy tf2 nav_msgs)
+ament_target_dependencies(ros_controllers rclcpp rclpy tf2 nav_msgs geometry_msgs std_msgs std_srvs)
 
 target_link_libraries(ros_controllers_node 
                       ${catkin_LIBRARIES}
@@ -46,7 +49,7 @@ install(DIRECTORY
   DESTINATION share/${PROJECT_NAME}/
 )
 
-ament_target_dependencies(ros_controllers_node rclcpp rclpy tf2 nav_msgs)
+ament_target_dependencies(ros_controllers_node rclcpp rclpy tf2 nav_msgs geometry_msgs std_msgs std_srvs)
 
                       
 ament_export_dependencies(rosidl_default_runtime)
