feat: stanley controller update

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,4 +13,10 @@
         Kd: 0.0
         error_threshold: 0.1
         signal_limit: 0.52359877559
+    Stanley:
+      V: 0.5  
+      K: 0.25
+      error_threshold: 0.1
+      signal_limit: 0.52359877559
+      
     sleep_time: 100 # miliseconds
