feat: signal getter of pure pursuit is completed

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,5 +18,9 @@
       K: 0.25
       error_threshold: 0.1
       signal_limit: 0.52359877559
-      
+    PurePursuit:
+      lookahead_distance: 0.5
+      error_threshold: 0.1
+      signal_limit: 0.52359877559
+      vehicle_base_width: 0.5
     sleep_time: 100 # miliseconds
