feat: mpc controller is added to main node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,11 @@ find_package(casadi REQUIRED)
 include_directories(include {catkin_INCLUDE_DIRS})
 
 add_library(ros_controllers STATIC
-            src/mpc.cpp
             src/pid.cpp
             src/stanley.cpp
             src/pure_pursuit.cpp
+            src/mpc.cpp
+            src/mpc_controller.cpp
 )
 
 add_executable(ros_controllers_node src/main_node.cpp)
