--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,6 +22,10 @@
       lookahead_distance: 0.5
       error_threshold: 0.1
       signal_limit: 0.52359877559
-      vehicle_base_width: 0.5
+    MPC:
+      horizon: 10
+      error_threshold: 0.1
+      signal_limit: 0.52359877559
+    vehicle_base_width: 0.5
     sleep_time: 100 # miliseconds
     csv_folder_name: "/home/furkan/controller_ws/src/ros_controllers/results/"
