refactor: pure pursuit controller ld parameter update

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,6 +20,7 @@
       signal_limit: 0.52359877559
     PurePursuit:
       lookahead_distance: 0.30
+      constant_velocity: 0.25
       error_threshold: 0.1
       signal_limit: 0.52359877559
     MPC:
