feat: mpc node is added via ground truth

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
@@ -29,14 +30,14 @@ add_library(ros_controllers STATIC
 )
 
 add_executable(ros_controllers_node src/main_node.cpp)
+add_executable(mpc_controller_node src/mpc_controller_node.cpp)
 
 target_link_libraries(ros_controllers
                       ${catkin_LIBRARIES}
                       casadi
-
 )     
 
-ament_target_dependencies(ros_controllers rclcpp rclpy tf2 nav_msgs geometry_msgs std_msgs std_srvs)
+ament_target_dependencies(ros_controllers rclcpp rclpy tf2 tf2_geometry_msgs nav_msgs geometry_msgs std_msgs std_srvs)
 
 target_link_libraries(ros_controllers_node 
                       ${catkin_LIBRARIES}
@@ -44,8 +45,14 @@ target_link_libraries(ros_controllers_node
                       casadi
 )
 
+target_link_libraries(mpc_controller_node
+                      ${catkin_LIBRARIES}
+                      casadi
+)
+
 install(TARGETS
   ros_controllers_node
+  mpc_controller_node
   DESTINATION lib/${PROJECT_NAME}
 )
 
@@ -55,7 +62,8 @@ install(DIRECTORY
   DESTINATION share/${PROJECT_NAME}/
 )
 
-ament_target_dependencies(ros_controllers_node rclcpp rclpy tf2 nav_msgs geometry_msgs std_msgs std_srvs)
+ament_target_dependencies(ros_controllers_node rclcpp rclpy tf2 tf2_geometry_msgs nav_msgs geometry_msgs std_msgs std_srvs)
+ament_target_dependencies(mpc_controller_node rclcpp rclpy tf2  tf2_geometry_msgs nav_msgs geometry_msgs std_msgs std_srvs)
 
                       
 ament_export_dependencies(rosidl_default_runtime)
