--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
+  <build_depend>autoware_planning_msgs</build_depend>
 
 
   <build_export_depend>roscpp</build_export_depend>
@@ -28,7 +29,8 @@
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>std_srvs</build_export_depend>
-  
+  <build_export_depend>autoware_planning_msgs</build_export_depend>
+
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>tf2</exec_depend>
@@ -37,6 +39,7 @@
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>std_srvs</exec_depend>
+  <exec_depend>autoware_planning_msgs</exec_depend>
 
   <export>
   </export>
